test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/CareHubAppConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Syntilio CareHub App Configuration</label>
    <pluralLabel>Syntilio CareHub App Configurations</pluralLabel>
</CustomObject>