test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/AssetInUseStatus__c.field-meta.xml
<CustomField>
    <fullName>AssetInUseStatus__c</fullName>
    <label>Asset In Use Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>