test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/CallValidityMistakenWindow__c.field-meta.xml
<CustomField>
    <fullName>CallValidityMistakenWindow__c</fullName>
    <label>Call Validity Mistaken Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>