test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/CaseClosurebyCaseOwnersandProfiles__c.field-meta.xml
<CustomField>
    <fullName>CaseClosurebyCaseOwnersandProfiles__c</fullName>
    <inlineHelpText>If you leave the text field blank, anyone can close the case. However, if you enter specific profile names, separated by commas, only those profiles will be able to close the case. For example, if you enter "System Administrator, Manager, Support” only users with those profiles can bypass the validation and close the case.</inlineHelpText>
    <label>Case Closure by Case Owners and Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>