test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/CaseTabClosureConfirmation__c.field-meta.xml
<CustomField>
    <fullName>CaseTabClosureConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Tab Closure Confirmation</label>
    <type>Checkbox</type>
</CustomField>