test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/CaseWorkingStatusName__c.field-meta.xml
<CustomField>
    <fullName>CaseWorkingStatusName__c</fullName>
    <inlineHelpText>When an agent automatically picks up a case through Omni Channel, it automatically updates the case status to indicate they are working on it. This status change is determined by a predefining the picklist value here.</inlineHelpText>
    <label>Case Working Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>