test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/TechnicalCaseRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>TechnicalCaseRecordTypeId__c</fullName>
    <label>Technical Case RecordType ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>