test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/UpdateContactLocationinCases__c.field-meta.xml
<CustomField>
    <fullName>UpdateContactLocationinCases__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this field is enabled, the flow runs in the background to check for a location related to the contact and then automatically updates the case.</inlineHelpText>
    <label>Update Contact Location in Cases</label>
    <type>Checkbox</type>
</CustomField>