test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/fields/VideoHubAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>VideoHubAccessLevel__c</fullName>
    <label>VideoHub Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
                <default>true</default>
                <label>Standalone</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>