test/source/carehub/main/default/objects/CareHubAppConfiguration__mdt/validationRules/NonOwnerClosingCase.validationRule-meta.xml
<ValidationRule>
    <fullName>NonOwnerClosingCase</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CaseClosurebyCaseOwnersandProfiles__c)),
    CaseClosureByNonCaseOwners__c = TRUE
)</errorConditionFormula>
    <errorMessage>Both ‘Case Closure by Case Owners and Profiles’ and ‘Case Closure by Non-Case Owners’ cannot be selected at the same time. Please choose only one option.</errorMessage>
</ValidationRule>